# GNN_Ranking

./: .gitignore  betweenness.py  closeness.py  convert.py  evaluate.py  flake.nix  layer.py  model_bet.py  pyproject.toml  requirements.txt  utils.py
datasets/: create_dataset.py  generate_graph.py
