[project]
name = "gnn-ranking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "cython==3.0.5",
    "networkit==10.0",
    "networkx==2.6.3",
    "numpy==1.21.6",
    "scipy==1.7.3",
    "torch",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu/torch-0.4.1-cp37-cp37m-linux_x86_64.whl" }
